cmake_minimum_required(VERSION 3.6)
project(train_reschedule)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    data/ABELS2020/ENG/P9R_eng.json
    data/ABELS2020/ENG/P9RI_eng.json
    data/ABELS2020/ENG/tl10_eng.json
    data/ABELS2020/ENG/tl1_eng.json
    data/ABELS2020/ENG/tl1e_eng.json
    data/ABELS2020/ENG/tl1ei_eng.json
    data/ABELS2020/ENG/tl2_eng.json
    data/ABELS2020/ENG/tl3_eng.json
    data/ABELS2020/ENG/tl4_eng.json
    data/ABELS2020/ENG/tl5_eng.json
    data/ABELS2020/ENG/tl6_eng.json
    data/ABELS2020/ENG/tl7_eng.json
    data/ABELS2020/ENG/tl8_eng.json
    data/ABELS2020/ENG/tl9_eng.json
    data/ABELS2020/ENG/ts_eng.json
    data/ABELS2020/ENG/tse_eng.json
    data/ABELS2020/GER/p9r.json
    data/ABELS2020/GER/p9ri.json
    data/ABELS2020/GER/tl1.json
    data/ABELS2020/GER/tl10.json
    data/ABELS2020/GER/tl1e.json
    data/ABELS2020/GER/tl1ei.json
    data/ABELS2020/GER/tl2.json
    data/ABELS2020/GER/tl3.json
    data/ABELS2020/GER/tl4.json
    data/ABELS2020/GER/tl5.json
    data/ABELS2020/GER/tl6.json
    data/ABELS2020/GER/tl7.json
    data/ABELS2020/GER/tl8.json
    data/ABELS2020/GER/tl9.json
    data/ABELS2020/GER/ts.json
    data/ABELS2020/GER/tse.json
    data/PESP/set-01/R1L1.txt
    data/PESP/set-01/R1L2.txt
    data/PESP/set-01/R1L3.txt
    data/PESP/set-01/R1L4.txt
    data/PESP/set-01/R2L1.txt
    data/PESP/set-01/R2L2.txt
    data/PESP/set-01/R2L3.txt
    data/PESP/set-01/R2L4.txt
    data/PESP/set-01/R3L1.txt
    data/PESP/set-01/R3L2.txt
    data/PESP/set-01/R3L3.txt
    data/PESP/set-01/R3L4.txt
    data/PESP/set-01/R4L1.txt
    data/PESP/set-01/R4L2.txt
    data/PESP/set-01/R4L3.txt
    data/PESP/set-01/R4L4.txt
    data/PESP/set-02/BL1.txt
    data/PESP/set-02/BL2.txt
    data/PESP/set-02/BL3.txt
    data/PESP/set-02/BL4.txt
    data/train-schedule-optimisation-challenge/01_dummy.json
    data/train-schedule-optimisation-challenge/02_a_little_less_dummy.json
    data/train-schedule-optimisation-challenge/03_FWA_0.125.json
    data/train-schedule-optimisation-challenge/04_V1.02_FWA_without_obstruction.json
    data/train-schedule-optimisation-challenge/05_V1.02_FWA_with_obstruction.json
    data/train-schedule-optimisation-challenge/06_V1.20_FWA.json
    data/train-schedule-optimisation-challenge/07_V1.22_FWA.json
    data/train-schedule-optimisation-challenge/08_V1.30_FWA.json
    data/train-schedule-optimisation-challenge/09_ZUE-ZG-CH_0600-1200.json
    data/translate.py
    data/translation_message_table.csv
    data/translation_table.csv
    problem/Instance.h
    problem/Requirement.h
    problem/Resource.h
    problem/Route.h
    problem/route_path.h
    problem/route_section.h
    problem/stats.h
    problem/Train.h
    problem/train_run_sections.h
    rapidjson/error/en.h
    rapidjson/error/error.h
    rapidjson/internal/biginteger.h
    rapidjson/internal/diyfp.h
    rapidjson/internal/dtoa.h
    rapidjson/internal/ieee754.h
    rapidjson/internal/itoa.h
    rapidjson/internal/meta.h
    rapidjson/internal/pow10.h
    rapidjson/internal/regex.h
    rapidjson/internal/stack.h
    rapidjson/internal/strfunc.h
    rapidjson/internal/strtod.h
    rapidjson/internal/swap.h
    rapidjson/msinttypes/inttypes.h
    rapidjson/msinttypes/stdint.h
    rapidjson/allocators.h
    rapidjson/cursorstreamwrapper.h
    rapidjson/document.h
    rapidjson/encodedstream.h
    rapidjson/encodings.h
    rapidjson/filereadstream.h
    rapidjson/filewritestream.h
    rapidjson/fwd.h
    rapidjson/istreamwrapper.h
    rapidjson/memorybuffer.h
    rapidjson/memorystream.h
    rapidjson/ostreamwrapper.h
    rapidjson/pointer.h
    rapidjson/prettywriter.h
    rapidjson/rapidjson.h
    rapidjson/reader.h
    rapidjson/schema.h
    rapidjson/stream.h
    rapidjson/stringbuffer.h
    rapidjson/writer.h
    solver/LinSBPS/algorithms/Alg_LinearSU.cc
    solver/LinSBPS/algorithms/Alg_LinearSU.h
    solver/LinSBPS/algorithms/Alg_MSU3.cc
    solver/LinSBPS/algorithms/Alg_MSU3.h
    solver/LinSBPS/algorithms/Alg_OLL.cc
    solver/LinSBPS/algorithms/Alg_OLL.h
    solver/LinSBPS/algorithms/Alg_PartMSU3.cc
    solver/LinSBPS/algorithms/Alg_PartMSU3.h
    solver/LinSBPS/algorithms/Alg_WBO.cc
    solver/LinSBPS/algorithms/Alg_WBO.h
    solver/LinSBPS/encodings/Enc_CNetworks.cc
    solver/LinSBPS/encodings/Enc_CNetworks.h
    solver/LinSBPS/encodings/Enc_GTE.cc
    solver/LinSBPS/encodings/Enc_GTE.h
    solver/LinSBPS/encodings/Enc_Ladder.cc
    solver/LinSBPS/encodings/Enc_Ladder.h
    solver/LinSBPS/encodings/Enc_MTotalizer.cc
    solver/LinSBPS/encodings/Enc_MTotalizer.h
    solver/LinSBPS/encodings/Enc_SWC.cc
    solver/LinSBPS/encodings/Enc_SWC.h
    solver/LinSBPS/encodings/Enc_Totalizer.cc
    solver/LinSBPS/encodings/Enc_Totalizer.h
    solver/LinSBPS/encodings/Encodings.cc
    solver/LinSBPS/encodings/Encodings.h
    solver/LinSBPS/graph/Graph.cc
    solver/LinSBPS/graph/Graph.h
    solver/LinSBPS/graph/Graph_Algorithms.cc
    solver/LinSBPS/graph/Graph_Communities.cc
    solver/LinSBPS/graph/Graph_Communities.h
    solver/LinSBPS/graph/NodeHeap.h
    solver/LinSBPS/graph/TreeNode.h
    solver/LinSBPS/solvers/glucose4.0/core/BoundedQueue.h
    solver/LinSBPS/solvers/glucose4.0/core/Constants.h
    solver/LinSBPS/solvers/glucose4.0/core/Dimacs.h
    solver/LinSBPS/solvers/glucose4.0/core/Solver.cc
    solver/LinSBPS/solvers/glucose4.0/core/Solver.h
    solver/LinSBPS/solvers/glucose4.0/core/SolverTypes.h
    solver/LinSBPS/solvers/glucose4.0/mtl/Alg.h
    solver/LinSBPS/solvers/glucose4.0/mtl/Alloc.h
    solver/LinSBPS/solvers/glucose4.0/mtl/Clone.h
    solver/LinSBPS/solvers/glucose4.0/mtl/Heap.h
    solver/LinSBPS/solvers/glucose4.0/mtl/IntTypes.h
    solver/LinSBPS/solvers/glucose4.0/mtl/Map.h
    solver/LinSBPS/solvers/glucose4.0/mtl/Queue.h
    solver/LinSBPS/solvers/glucose4.0/mtl/Sort.h
    solver/LinSBPS/solvers/glucose4.0/mtl/Vec.h
    solver/LinSBPS/solvers/glucose4.0/mtl/XAlloc.h
    solver/LinSBPS/solvers/glucose4.0/parallel/ClausesBuffer.cc
    solver/LinSBPS/solvers/glucose4.0/parallel/ClausesBuffer.h
    solver/LinSBPS/solvers/glucose4.0/parallel/Main.cc
    solver/LinSBPS/solvers/glucose4.0/parallel/MultiSolvers.cc
    solver/LinSBPS/solvers/glucose4.0/parallel/MultiSolvers.h
    solver/LinSBPS/solvers/glucose4.0/parallel/ParallelSolver.cc
    solver/LinSBPS/solvers/glucose4.0/parallel/ParallelSolver.h
    solver/LinSBPS/solvers/glucose4.0/parallel/SharedCompanion.cc
    solver/LinSBPS/solvers/glucose4.0/parallel/SharedCompanion.h
    solver/LinSBPS/solvers/glucose4.0/parallel/SolverCompanion.cc
    solver/LinSBPS/solvers/glucose4.0/parallel/SolverCompanion.h
    solver/LinSBPS/solvers/glucose4.0/parallel/SolverConfiguration.cc
    solver/LinSBPS/solvers/glucose4.0/parallel/SolverConfiguration.h
    solver/LinSBPS/solvers/glucose4.0/simp/Main.cc
    solver/LinSBPS/solvers/glucose4.0/simp/SimpSolver.cc
    solver/LinSBPS/solvers/glucose4.0/simp/SimpSolver.h
    solver/LinSBPS/solvers/glucose4.0/utils/Options.cc
    solver/LinSBPS/solvers/glucose4.0/utils/Options.h
    solver/LinSBPS/solvers/glucose4.0/utils/ParseUtils.h
    solver/LinSBPS/solvers/glucose4.0/utils/System.cc
    solver/LinSBPS/solvers/glucose4.0/utils/System.h
    solver/LinSBPS/solvers/glucose4.1/core/BoundedQueue.h
    solver/LinSBPS/solvers/glucose4.1/core/Constants.h
    solver/LinSBPS/solvers/glucose4.1/core/Dimacs.h
    solver/LinSBPS/solvers/glucose4.1/core/Solver.cc
    solver/LinSBPS/solvers/glucose4.1/core/Solver.h
    solver/LinSBPS/solvers/glucose4.1/core/SolverStats.h
    solver/LinSBPS/solvers/glucose4.1/core/SolverTypes.h
    solver/LinSBPS/solvers/glucose4.1/mtl/Alg.h
    solver/LinSBPS/solvers/glucose4.1/mtl/Alloc.h
    solver/LinSBPS/solvers/glucose4.1/mtl/Clone.h
    solver/LinSBPS/solvers/glucose4.1/mtl/Heap.h
    solver/LinSBPS/solvers/glucose4.1/mtl/IntTypes.h
    solver/LinSBPS/solvers/glucose4.1/mtl/Map.h
    solver/LinSBPS/solvers/glucose4.1/mtl/Queue.h
    solver/LinSBPS/solvers/glucose4.1/mtl/Sort.h
    solver/LinSBPS/solvers/glucose4.1/mtl/Vec.h
    solver/LinSBPS/solvers/glucose4.1/mtl/VecThreads.h
    solver/LinSBPS/solvers/glucose4.1/mtl/XAlloc.h
    solver/LinSBPS/solvers/glucose4.1/parallel/ClausesBuffer.cc
    solver/LinSBPS/solvers/glucose4.1/parallel/ClausesBuffer.h
    solver/LinSBPS/solvers/glucose4.1/parallel/Main.cc
    solver/LinSBPS/solvers/glucose4.1/parallel/MultiSolvers.cc
    solver/LinSBPS/solvers/glucose4.1/parallel/MultiSolvers.h
    solver/LinSBPS/solvers/glucose4.1/parallel/ParallelSolver.cc
    solver/LinSBPS/solvers/glucose4.1/parallel/ParallelSolver.h
    solver/LinSBPS/solvers/glucose4.1/parallel/SharedCompanion.cc
    solver/LinSBPS/solvers/glucose4.1/parallel/SharedCompanion.h
    solver/LinSBPS/solvers/glucose4.1/parallel/SolverCompanion.cc
    solver/LinSBPS/solvers/glucose4.1/parallel/SolverCompanion.h
    solver/LinSBPS/solvers/glucose4.1/parallel/SolverConfiguration.cc
    solver/LinSBPS/solvers/glucose4.1/parallel/SolverConfiguration.h
    solver/LinSBPS/solvers/glucose4.1/simp/Main.cc
    solver/LinSBPS/solvers/glucose4.1/simp/SimpSolver.cc
    solver/LinSBPS/solvers/glucose4.1/simp/SimpSolver.h
    solver/LinSBPS/solvers/glucose4.1/utils/Options.cc
    solver/LinSBPS/solvers/glucose4.1/utils/Options.h
    solver/LinSBPS/solvers/glucose4.1/utils/ParseUtils.h
    solver/LinSBPS/solvers/glucose4.1/utils/System.cc
    solver/LinSBPS/solvers/glucose4.1/utils/System.h
    solver/LinSBPS/solvers/minisat2.2/core/Dimacs.h
    solver/LinSBPS/solvers/minisat2.2/core/Main.cc
    solver/LinSBPS/solvers/minisat2.2/core/Solver.cc
    solver/LinSBPS/solvers/minisat2.2/core/Solver.h
    solver/LinSBPS/solvers/minisat2.2/core/SolverTypes.h
    solver/LinSBPS/solvers/minisat2.2/mtl/Alg.h
    solver/LinSBPS/solvers/minisat2.2/mtl/Alloc.h
    solver/LinSBPS/solvers/minisat2.2/mtl/Heap.h
    solver/LinSBPS/solvers/minisat2.2/mtl/IntTypes.h
    solver/LinSBPS/solvers/minisat2.2/mtl/Map.h
    solver/LinSBPS/solvers/minisat2.2/mtl/Queue.h
    solver/LinSBPS/solvers/minisat2.2/mtl/Sort.h
    solver/LinSBPS/solvers/minisat2.2/mtl/Vec.h
    solver/LinSBPS/solvers/minisat2.2/mtl/XAlloc.h
    solver/LinSBPS/solvers/minisat2.2/simp/Main.cc
    solver/LinSBPS/solvers/minisat2.2/simp/SimpSolver.cc
    solver/LinSBPS/solvers/minisat2.2/simp/SimpSolver.h
    solver/LinSBPS/solvers/minisat2.2/utils/Options.cc
    solver/LinSBPS/solvers/minisat2.2/utils/Options.h
    solver/LinSBPS/solvers/minisat2.2/utils/ParseUtils.h
    solver/LinSBPS/solvers/minisat2.2/utils/System.cc
    solver/LinSBPS/solvers/minisat2.2/utils/System.h
    solver/LinSBPS/Encoder.cc
    solver/LinSBPS/Encoder.h
    solver/LinSBPS/FormulaPB.h
    solver/LinSBPS/LNSparameters.h
    solver/LinSBPS/Main.cc
    solver/LinSBPS/MaxSAT.cc
    solver/LinSBPS/MaxSAT.h
    solver/LinSBPS/MaxSAT_Partition.cc
    solver/LinSBPS/MaxSAT_Partition.h
    solver/LinSBPS/MaxSATFormula.cc
    solver/LinSBPS/MaxSATFormula.h
    solver/LinSBPS/MaxTypes.h
    solver/LinSBPS/ParserMaxSAT.h
    solver/LinSBPS/ParserPB.cc
    solver/LinSBPS/ParserPB.h
    solver/Loandra/algorithms/Alg_LinearSU.cc
    solver/Loandra/algorithms/Alg_LinearSU.h
    solver/Loandra/algorithms/Alg_MSU3.cc
    solver/Loandra/algorithms/Alg_MSU3.h
    solver/Loandra/algorithms/Alg_OLL.cc
    solver/Loandra/algorithms/Alg_OLL.h
    solver/Loandra/algorithms/Alg_PartMSU3.cc
    solver/Loandra/algorithms/Alg_PartMSU3.h
    solver/Loandra/algorithms/Alg_PMRES.cc
    solver/Loandra/algorithms/Alg_PMRES.h
    solver/Loandra/algorithms/Alg_WBO.cc
    solver/Loandra/algorithms/Alg_WBO.h
    solver/Loandra/encodings/Enc_Adder.cc
    solver/Loandra/encodings/Enc_Adder.h
    solver/Loandra/encodings/Enc_CNetworks.cc
    solver/Loandra/encodings/Enc_CNetworks.h
    solver/Loandra/encodings/Enc_GTE.cc
    solver/Loandra/encodings/Enc_GTE.h
    solver/Loandra/encodings/Enc_Ladder.cc
    solver/Loandra/encodings/Enc_Ladder.h
    solver/Loandra/encodings/Enc_MTotalizer.cc
    solver/Loandra/encodings/Enc_MTotalizer.h
    solver/Loandra/encodings/Enc_SWC.cc
    solver/Loandra/encodings/Enc_SWC.h
    solver/Loandra/encodings/Enc_Totalizer.cc
    solver/Loandra/encodings/Enc_Totalizer.h
    solver/Loandra/encodings/Encodings.cc
    solver/Loandra/encodings/Encodings.h
    solver/Loandra/graph/Graph.cc
    solver/Loandra/graph/Graph.h
    solver/Loandra/graph/Graph_Algorithms.cc
    solver/Loandra/graph/Graph_Communities.cc
    solver/Loandra/graph/Graph_Communities.h
    solver/Loandra/graph/NodeHeap.h
    solver/Loandra/graph/TreeNode.h
    solver/Loandra/solvers/glucose4.0/core/BoundedQueue.h
    solver/Loandra/solvers/glucose4.0/core/Constants.h
    solver/Loandra/solvers/glucose4.0/core/Dimacs.h
    solver/Loandra/solvers/glucose4.0/core/Solver.cc
    solver/Loandra/solvers/glucose4.0/core/Solver.h
    solver/Loandra/solvers/glucose4.0/core/SolverTypes.h
    solver/Loandra/solvers/glucose4.0/mtl/Alg.h
    solver/Loandra/solvers/glucose4.0/mtl/Alloc.h
    solver/Loandra/solvers/glucose4.0/mtl/Clone.h
    solver/Loandra/solvers/glucose4.0/mtl/Heap.h
    solver/Loandra/solvers/glucose4.0/mtl/IntTypes.h
    solver/Loandra/solvers/glucose4.0/mtl/Map.h
    solver/Loandra/solvers/glucose4.0/mtl/Queue.h
    solver/Loandra/solvers/glucose4.0/mtl/Sort.h
    solver/Loandra/solvers/glucose4.0/mtl/Vec.h
    solver/Loandra/solvers/glucose4.0/mtl/XAlloc.h
    solver/Loandra/solvers/glucose4.0/parallel/ClausesBuffer.cc
    solver/Loandra/solvers/glucose4.0/parallel/ClausesBuffer.h
    solver/Loandra/solvers/glucose4.0/parallel/Main.cc
    solver/Loandra/solvers/glucose4.0/parallel/MultiSolvers.cc
    solver/Loandra/solvers/glucose4.0/parallel/MultiSolvers.h
    solver/Loandra/solvers/glucose4.0/parallel/ParallelSolver.cc
    solver/Loandra/solvers/glucose4.0/parallel/ParallelSolver.h
    solver/Loandra/solvers/glucose4.0/parallel/SharedCompanion.cc
    solver/Loandra/solvers/glucose4.0/parallel/SharedCompanion.h
    solver/Loandra/solvers/glucose4.0/parallel/SolverCompanion.cc
    solver/Loandra/solvers/glucose4.0/parallel/SolverCompanion.h
    solver/Loandra/solvers/glucose4.0/parallel/SolverConfiguration.cc
    solver/Loandra/solvers/glucose4.0/parallel/SolverConfiguration.h
    solver/Loandra/solvers/glucose4.0/simp/Main.cc
    solver/Loandra/solvers/glucose4.0/simp/SimpSolver.cc
    solver/Loandra/solvers/glucose4.0/simp/SimpSolver.h
    solver/Loandra/solvers/glucose4.0/utils/Options.cc
    solver/Loandra/solvers/glucose4.0/utils/Options.h
    solver/Loandra/solvers/glucose4.0/utils/ParseUtils.h
    solver/Loandra/solvers/glucose4.0/utils/System.cc
    solver/Loandra/solvers/glucose4.0/utils/System.h
    solver/Loandra/solvers/glucose4.1/core/BoundedQueue.h
    solver/Loandra/solvers/glucose4.1/core/Constants.h
    solver/Loandra/solvers/glucose4.1/core/Dimacs.h
    solver/Loandra/solvers/glucose4.1/core/Solver.cc
    solver/Loandra/solvers/glucose4.1/core/Solver.h
    solver/Loandra/solvers/glucose4.1/core/SolverStats.h
    solver/Loandra/solvers/glucose4.1/core/SolverTypes.h
    solver/Loandra/solvers/glucose4.1/mtl/Alg.h
    solver/Loandra/solvers/glucose4.1/mtl/Alloc.h
    solver/Loandra/solvers/glucose4.1/mtl/Clone.h
    solver/Loandra/solvers/glucose4.1/mtl/Heap.h
    solver/Loandra/solvers/glucose4.1/mtl/IntTypes.h
    solver/Loandra/solvers/glucose4.1/mtl/Map.h
    solver/Loandra/solvers/glucose4.1/mtl/Queue.h
    solver/Loandra/solvers/glucose4.1/mtl/Sort.h
    solver/Loandra/solvers/glucose4.1/mtl/Vec.h
    solver/Loandra/solvers/glucose4.1/mtl/VecThreads.h
    solver/Loandra/solvers/glucose4.1/mtl/XAlloc.h
    solver/Loandra/solvers/glucose4.1/parallel/ClausesBuffer.cc
    solver/Loandra/solvers/glucose4.1/parallel/ClausesBuffer.h
    solver/Loandra/solvers/glucose4.1/parallel/Main.cc
    solver/Loandra/solvers/glucose4.1/parallel/MultiSolvers.cc
    solver/Loandra/solvers/glucose4.1/parallel/MultiSolvers.h
    solver/Loandra/solvers/glucose4.1/parallel/ParallelSolver.cc
    solver/Loandra/solvers/glucose4.1/parallel/ParallelSolver.h
    solver/Loandra/solvers/glucose4.1/parallel/SharedCompanion.cc
    solver/Loandra/solvers/glucose4.1/parallel/SharedCompanion.h
    solver/Loandra/solvers/glucose4.1/parallel/SolverCompanion.cc
    solver/Loandra/solvers/glucose4.1/parallel/SolverCompanion.h
    solver/Loandra/solvers/glucose4.1/parallel/SolverConfiguration.cc
    solver/Loandra/solvers/glucose4.1/parallel/SolverConfiguration.h
    solver/Loandra/solvers/glucose4.1/simp/Main.cc
    solver/Loandra/solvers/glucose4.1/simp/SimpSolver.cc
    solver/Loandra/solvers/glucose4.1/simp/SimpSolver.h
    solver/Loandra/solvers/glucose4.1/utils/Options.cc
    solver/Loandra/solvers/glucose4.1/utils/Options.h
    solver/Loandra/solvers/glucose4.1/utils/ParseUtils.h
    solver/Loandra/solvers/glucose4.1/utils/System.cc
    solver/Loandra/solvers/glucose4.1/utils/System.h
    solver/Loandra/solvers/minisat2.2/core/Dimacs.h
    solver/Loandra/solvers/minisat2.2/core/Main.cc
    solver/Loandra/solvers/minisat2.2/core/Solver.cc
    solver/Loandra/solvers/minisat2.2/core/Solver.h
    solver/Loandra/solvers/minisat2.2/core/SolverTypes.h
    solver/Loandra/solvers/minisat2.2/mtl/Alg.h
    solver/Loandra/solvers/minisat2.2/mtl/Alloc.h
    solver/Loandra/solvers/minisat2.2/mtl/Heap.h
    solver/Loandra/solvers/minisat2.2/mtl/IntTypes.h
    solver/Loandra/solvers/minisat2.2/mtl/Map.h
    solver/Loandra/solvers/minisat2.2/mtl/Queue.h
    solver/Loandra/solvers/minisat2.2/mtl/Sort.h
    solver/Loandra/solvers/minisat2.2/mtl/Vec.h
    solver/Loandra/solvers/minisat2.2/mtl/XAlloc.h
    solver/Loandra/solvers/minisat2.2/simp/Main.cc
    solver/Loandra/solvers/minisat2.2/simp/SimpSolver.cc
    solver/Loandra/solvers/minisat2.2/simp/SimpSolver.h
    solver/Loandra/solvers/minisat2.2/utils/Options.cc
    solver/Loandra/solvers/minisat2.2/utils/Options.h
    solver/Loandra/solvers/minisat2.2/utils/ParseUtils.h
    solver/Loandra/solvers/minisat2.2/utils/System.cc
    solver/Loandra/solvers/minisat2.2/utils/System.h
    solver/Loandra/Encoder.cc
    solver/Loandra/Encoder.h
    solver/Loandra/FormulaPB.h
    solver/Loandra/Main.cc
    solver/Loandra/MaxSAT.cc
    solver/Loandra/MaxSAT.h
    solver/Loandra/MaxSAT_Partition.cc
    solver/Loandra/MaxSAT_Partition.h
    solver/Loandra/MaxSATFormula.cc
    solver/Loandra/MaxSATFormula.h
    solver/Loandra/MaxTypes.h
    solver/Loandra/ParserMaxSAT.h
    solver/Loandra/ParserPB.cc
    solver/Loandra/ParserPB.h
    solver/MaxHS/glucose/core/BoundedQueue.h
    solver/MaxHS/glucose/core/Constants.h
    solver/MaxHS/glucose/core/Dimacs.h
    solver/MaxHS/glucose/core/Main.cc
    solver/MaxHS/glucose/core/Solver.cc
    solver/MaxHS/glucose/core/Solver.h
    solver/MaxHS/glucose/core/SolverTypes.h
    solver/MaxHS/glucose/mtl/Alg.h
    solver/MaxHS/glucose/mtl/Alloc.h
    solver/MaxHS/glucose/mtl/Heap.h
    solver/MaxHS/glucose/mtl/IntMap.h
    solver/MaxHS/glucose/mtl/IntTypes.h
    solver/MaxHS/glucose/mtl/Map.h
    solver/MaxHS/glucose/mtl/Queue.h
    solver/MaxHS/glucose/mtl/Sort.h
    solver/MaxHS/glucose/mtl/Vec.h
    solver/MaxHS/glucose/mtl/XAlloc.h
    solver/MaxHS/glucose/simp/Main.cc
    solver/MaxHS/glucose/simp/SimpSolver.cc
    solver/MaxHS/glucose/simp/SimpSolver.h
    solver/MaxHS/glucose/utils/Options.cc
    solver/MaxHS/glucose/utils/Options.h
    solver/MaxHS/glucose/utils/ParseUtils.h
    solver/MaxHS/glucose/utils/System.cc
    solver/MaxHS/glucose/utils/System.h
    solver/MaxHS/maxhs/core/Assumptions.cc
    solver/MaxHS/maxhs/core/Assumptions.h
    solver/MaxHS/maxhs/core/Bvars.cc
    solver/MaxHS/maxhs/core/Bvars.h
    solver/MaxHS/maxhs/core/Dimacs.h
    solver/MaxHS/maxhs/core/Main.cc
    solver/MaxHS/maxhs/core/MaxSolver.cc
    solver/MaxHS/maxhs/core/MaxSolver.h
    solver/MaxHS/maxhs/core/MaxSolverTypes.h
    solver/MaxHS/maxhs/core/Wcnf.cc
    solver/MaxHS/maxhs/core/Wcnf.h
    solver/MaxHS/maxhs/ds/Packed.h
    solver/MaxHS/maxhs/ifaces/Cplex.cc
    solver/MaxHS/maxhs/ifaces/Cplex.h
    solver/MaxHS/maxhs/ifaces/greedySatSolver.cc
    solver/MaxHS/maxhs/ifaces/greedySatSolver.h
    solver/MaxHS/maxhs/ifaces/GreedySolver.cc
    solver/MaxHS/maxhs/ifaces/GreedySolver.h
    solver/MaxHS/maxhs/ifaces/miniSatSolver.cc
    solver/MaxHS/maxhs/ifaces/miniSatSolver.h
    solver/MaxHS/maxhs/ifaces/muser.cc
    solver/MaxHS/maxhs/ifaces/muser.h
    solver/MaxHS/maxhs/ifaces/SatSolver.cc
    solver/MaxHS/maxhs/ifaces/SatSolver.h
    solver/MaxHS/maxhs/utils/hash.cc
    solver/MaxHS/maxhs/utils/hash.h
    solver/MaxHS/maxhs/utils/io.h
    solver/MaxHS/maxhs/utils/Params.cc
    solver/MaxHS/maxhs/utils/Params.h
    solver/MaxHS/minisat/core/Dimacs.h
    solver/MaxHS/minisat/core/Main.cc
    solver/MaxHS/minisat/core/Solver.cc
    solver/MaxHS/minisat/core/Solver.h
    solver/MaxHS/minisat/core/SolverTypes.h
    solver/MaxHS/minisat/mtl/Alg.h
    solver/MaxHS/minisat/mtl/Alloc.h
    solver/MaxHS/minisat/mtl/Heap.h
    solver/MaxHS/minisat/mtl/IntMap.h
    solver/MaxHS/minisat/mtl/IntTypes.h
    solver/MaxHS/minisat/mtl/Map.h
    solver/MaxHS/minisat/mtl/Queue.h
    solver/MaxHS/minisat/mtl/Rnd.h
    solver/MaxHS/minisat/mtl/Sort.h
    solver/MaxHS/minisat/mtl/Vec.h
    solver/MaxHS/minisat/mtl/XAlloc.h
    solver/MaxHS/minisat/simp/Main.cc
    solver/MaxHS/minisat/simp/SimpSolver.cc
    solver/MaxHS/minisat/simp/SimpSolver.h
    solver/MaxHS/minisat/utils/Options.cc
    solver/MaxHS/minisat/utils/Options.h
    solver/MaxHS/minisat/utils/ParseUtils.h
    solver/MaxHS/minisat/utils/System.cc
    solver/MaxHS/minisat/utils/System.h
    solver/Open-WBO-Inc/algorithms/Alg_BLS.cc
    solver/Open-WBO-Inc/algorithms/Alg_BLS.h
    solver/Open-WBO-Inc/algorithms/Alg_LinearSU.cc
    solver/Open-WBO-Inc/algorithms/Alg_LinearSU.h
    solver/Open-WBO-Inc/algorithms/Alg_LinearSU_IncBMO.cc
    solver/Open-WBO-Inc/algorithms/Alg_LinearSU_IncBMO.h
    solver/Open-WBO-Inc/algorithms/Alg_LinearSU_IncCluster.cc
    solver/Open-WBO-Inc/algorithms/Alg_LinearSU_IncCluster.h
    solver/Open-WBO-Inc/algorithms/Alg_MSU3.cc
    solver/Open-WBO-Inc/algorithms/Alg_MSU3.h
    solver/Open-WBO-Inc/algorithms/Alg_OBV.cc
    solver/Open-WBO-Inc/algorithms/Alg_OBV.h
    solver/Open-WBO-Inc/algorithms/Alg_OLL.cc
    solver/Open-WBO-Inc/algorithms/Alg_OLL.h
    solver/Open-WBO-Inc/algorithms/Alg_OLL_IncCluster.cc
    solver/Open-WBO-Inc/algorithms/Alg_OLL_IncCluster.h
    solver/Open-WBO-Inc/algorithms/Alg_PartMSU3.cc
    solver/Open-WBO-Inc/algorithms/Alg_PartMSU3.h
    solver/Open-WBO-Inc/algorithms/Alg_WBO.cc
    solver/Open-WBO-Inc/algorithms/Alg_WBO.h
    solver/Open-WBO-Inc/clusterings/Cluster.cc
    solver/Open-WBO-Inc/clusterings/Cluster.h
    solver/Open-WBO-Inc/clusterings/Cluster_DivisiveMaxSeparate.cc
    solver/Open-WBO-Inc/clusterings/Cluster_DivisiveMaxSeparate.h
    solver/Open-WBO-Inc/clusterings/SequenceStatistic.cc
    solver/Open-WBO-Inc/clusterings/SequenceStatistic.h
    solver/Open-WBO-Inc/encodings/Enc_Adder.cc
    solver/Open-WBO-Inc/encodings/Enc_Adder.h
    solver/Open-WBO-Inc/encodings/Enc_CNetworks.cc
    solver/Open-WBO-Inc/encodings/Enc_CNetworks.h
    solver/Open-WBO-Inc/encodings/Enc_GTE.cc
    solver/Open-WBO-Inc/encodings/Enc_GTE.h
    solver/Open-WBO-Inc/encodings/Enc_Ladder.cc
    solver/Open-WBO-Inc/encodings/Enc_Ladder.h
    solver/Open-WBO-Inc/encodings/Enc_MTotalizer.cc
    solver/Open-WBO-Inc/encodings/Enc_MTotalizer.h
    solver/Open-WBO-Inc/encodings/Enc_SWC.cc
    solver/Open-WBO-Inc/encodings/Enc_SWC.h
    solver/Open-WBO-Inc/encodings/Enc_Totalizer.cc
    solver/Open-WBO-Inc/encodings/Enc_Totalizer.h
    solver/Open-WBO-Inc/encodings/Encodings.cc
    solver/Open-WBO-Inc/encodings/Encodings.h
    solver/Open-WBO-Inc/graph/Graph.cc
    solver/Open-WBO-Inc/graph/Graph.h
    solver/Open-WBO-Inc/graph/Graph_Algorithms.cc
    solver/Open-WBO-Inc/graph/Graph_Communities.cc
    solver/Open-WBO-Inc/graph/Graph_Communities.h
    solver/Open-WBO-Inc/graph/NodeHeap.h
    solver/Open-WBO-Inc/graph/TreeNode.h
    solver/Open-WBO-Inc/solvers/glucose4.0/core/BoundedQueue.h
    solver/Open-WBO-Inc/solvers/glucose4.0/core/Constants.h
    solver/Open-WBO-Inc/solvers/glucose4.0/core/Dimacs.h
    solver/Open-WBO-Inc/solvers/glucose4.0/core/Solver.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/core/Solver.h
    solver/Open-WBO-Inc/solvers/glucose4.0/core/SolverTypes.h
    solver/Open-WBO-Inc/solvers/glucose4.0/mtl/Alg.h
    solver/Open-WBO-Inc/solvers/glucose4.0/mtl/Alloc.h
    solver/Open-WBO-Inc/solvers/glucose4.0/mtl/Clone.h
    solver/Open-WBO-Inc/solvers/glucose4.0/mtl/Heap.h
    solver/Open-WBO-Inc/solvers/glucose4.0/mtl/IntTypes.h
    solver/Open-WBO-Inc/solvers/glucose4.0/mtl/Map.h
    solver/Open-WBO-Inc/solvers/glucose4.0/mtl/Queue.h
    solver/Open-WBO-Inc/solvers/glucose4.0/mtl/Sort.h
    solver/Open-WBO-Inc/solvers/glucose4.0/mtl/Vec.h
    solver/Open-WBO-Inc/solvers/glucose4.0/mtl/XAlloc.h
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/ClausesBuffer.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/ClausesBuffer.h
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/Main.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/MultiSolvers.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/MultiSolvers.h
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/ParallelSolver.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/ParallelSolver.h
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/SharedCompanion.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/SharedCompanion.h
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/SolverCompanion.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/SolverCompanion.h
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/SolverConfiguration.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/parallel/SolverConfiguration.h
    solver/Open-WBO-Inc/solvers/glucose4.0/simp/Main.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/simp/SimpSolver.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/simp/SimpSolver.h
    solver/Open-WBO-Inc/solvers/glucose4.0/utils/Options.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/utils/Options.h
    solver/Open-WBO-Inc/solvers/glucose4.0/utils/ParseUtils.h
    solver/Open-WBO-Inc/solvers/glucose4.0/utils/System.cc
    solver/Open-WBO-Inc/solvers/glucose4.0/utils/System.h
    solver/Open-WBO-Inc/solvers/glucose4.1/core/BoundedQueue.h
    solver/Open-WBO-Inc/solvers/glucose4.1/core/Constants.h
    solver/Open-WBO-Inc/solvers/glucose4.1/core/Dimacs.h
    solver/Open-WBO-Inc/solvers/glucose4.1/core/Solver.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/core/Solver.h
    solver/Open-WBO-Inc/solvers/glucose4.1/core/SolverStats.h
    solver/Open-WBO-Inc/solvers/glucose4.1/core/SolverTypes.h
    solver/Open-WBO-Inc/solvers/glucose4.1/mtl/Alg.h
    solver/Open-WBO-Inc/solvers/glucose4.1/mtl/Alloc.h
    solver/Open-WBO-Inc/solvers/glucose4.1/mtl/Clone.h
    solver/Open-WBO-Inc/solvers/glucose4.1/mtl/Heap.h
    solver/Open-WBO-Inc/solvers/glucose4.1/mtl/IntTypes.h
    solver/Open-WBO-Inc/solvers/glucose4.1/mtl/Map.h
    solver/Open-WBO-Inc/solvers/glucose4.1/mtl/Queue.h
    solver/Open-WBO-Inc/solvers/glucose4.1/mtl/Sort.h
    solver/Open-WBO-Inc/solvers/glucose4.1/mtl/Vec.h
    solver/Open-WBO-Inc/solvers/glucose4.1/mtl/VecThreads.h
    solver/Open-WBO-Inc/solvers/glucose4.1/mtl/XAlloc.h
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/ClausesBuffer.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/ClausesBuffer.h
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/Main.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/MultiSolvers.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/MultiSolvers.h
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/ParallelSolver.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/ParallelSolver.h
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/SharedCompanion.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/SharedCompanion.h
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/SolverCompanion.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/SolverCompanion.h
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/SolverConfiguration.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/parallel/SolverConfiguration.h
    solver/Open-WBO-Inc/solvers/glucose4.1/simp/Main.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/simp/SimpSolver.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/simp/SimpSolver.h
    solver/Open-WBO-Inc/solvers/glucose4.1/utils/Options.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/utils/Options.h
    solver/Open-WBO-Inc/solvers/glucose4.1/utils/ParseUtils.h
    solver/Open-WBO-Inc/solvers/glucose4.1/utils/System.cc
    solver/Open-WBO-Inc/solvers/glucose4.1/utils/System.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/core/Dimacs.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/core/Main.cc
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/core/Solver.cc
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/core/Solver.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/core/SolverTypes.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/mtl/Alg.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/mtl/Alloc.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/mtl/Heap.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/mtl/IntTypes.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/mtl/Map.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/mtl/Queue.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/mtl/Sort.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/mtl/Vec.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/mtl/XAlloc.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/simp/Main.cc
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/simp/SimpSolver.cc
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/simp/SimpSolver.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/utils/Options.cc
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/utils/Options.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/utils/ParseUtils.h
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/utils/System.cc
    solver/Open-WBO-Inc/solvers/MapleCOMSPS_LRB/utils/System.h
    solver/Open-WBO-Inc/solvers/minisat2.2/core/Dimacs.h
    solver/Open-WBO-Inc/solvers/minisat2.2/core/Main.cc
    solver/Open-WBO-Inc/solvers/minisat2.2/core/Solver.cc
    solver/Open-WBO-Inc/solvers/minisat2.2/core/Solver.h
    solver/Open-WBO-Inc/solvers/minisat2.2/core/SolverTypes.h
    solver/Open-WBO-Inc/solvers/minisat2.2/mtl/Alg.h
    solver/Open-WBO-Inc/solvers/minisat2.2/mtl/Alloc.h
    solver/Open-WBO-Inc/solvers/minisat2.2/mtl/Heap.h
    solver/Open-WBO-Inc/solvers/minisat2.2/mtl/IntTypes.h
    solver/Open-WBO-Inc/solvers/minisat2.2/mtl/Map.h
    solver/Open-WBO-Inc/solvers/minisat2.2/mtl/Queue.h
    solver/Open-WBO-Inc/solvers/minisat2.2/mtl/Sort.h
    solver/Open-WBO-Inc/solvers/minisat2.2/mtl/Vec.h
    solver/Open-WBO-Inc/solvers/minisat2.2/mtl/XAlloc.h
    solver/Open-WBO-Inc/solvers/minisat2.2/simp/Main.cc
    solver/Open-WBO-Inc/solvers/minisat2.2/simp/SimpSolver.cc
    solver/Open-WBO-Inc/solvers/minisat2.2/simp/SimpSolver.h
    solver/Open-WBO-Inc/solvers/minisat2.2/utils/Options.cc
    solver/Open-WBO-Inc/solvers/minisat2.2/utils/Options.h
    solver/Open-WBO-Inc/solvers/minisat2.2/utils/ParseUtils.h
    solver/Open-WBO-Inc/solvers/minisat2.2/utils/System.cc
    solver/Open-WBO-Inc/solvers/minisat2.2/utils/System.h
    solver/Open-WBO-Inc/Encoder.cc
    solver/Open-WBO-Inc/Encoder.h
    solver/Open-WBO-Inc/FormulaPB.h
    solver/Open-WBO-Inc/Main.cc
    solver/Open-WBO-Inc/MaxSAT.cc
    solver/Open-WBO-Inc/MaxSAT.h
    solver/Open-WBO-Inc/MaxSAT_Partition.cc
    solver/Open-WBO-Inc/MaxSAT_Partition.h
    solver/Open-WBO-Inc/MaxSATFormula.cc
    solver/Open-WBO-Inc/MaxSATFormula.h
    solver/Open-WBO-Inc/MaxTypes.h
    solver/Open-WBO-Inc/ParserMaxSAT.h
    solver/Open-WBO-Inc/ParserPB.cc
    solver/Open-WBO-Inc/ParserPB.h
    solver/SATLike/basis_pms.h
    solver/SATLike/deci.h
    solver/SATLike/pms.cpp
    solver/SATLike/pms.h
    solver/TT-Open-WBO-Inc/algorithms/Alg_BLS.cc
    solver/TT-Open-WBO-Inc/algorithms/Alg_BLS.h
    solver/TT-Open-WBO-Inc/algorithms/Alg_LinearSU.cc
    solver/TT-Open-WBO-Inc/algorithms/Alg_LinearSU.h
    solver/TT-Open-WBO-Inc/algorithms/Alg_LinearSU_Clustering.cc
    solver/TT-Open-WBO-Inc/algorithms/Alg_LinearSU_Clustering.h
    solver/TT-Open-WBO-Inc/algorithms/Alg_LinearSU_Mod.cc
    solver/TT-Open-WBO-Inc/algorithms/Alg_LinearSU_Mod.h
    solver/TT-Open-WBO-Inc/algorithms/Alg_MSU3.cc
    solver/TT-Open-WBO-Inc/algorithms/Alg_MSU3.h
    solver/TT-Open-WBO-Inc/algorithms/Alg_OBV.cc
    solver/TT-Open-WBO-Inc/algorithms/Alg_OBV.h
    solver/TT-Open-WBO-Inc/algorithms/Alg_OLL.cc
    solver/TT-Open-WBO-Inc/algorithms/Alg_OLL.h
    solver/TT-Open-WBO-Inc/algorithms/Alg_OLL_Mod.cc
    solver/TT-Open-WBO-Inc/algorithms/Alg_OLL_Mod.h
    solver/TT-Open-WBO-Inc/algorithms/Alg_PartMSU3.cc
    solver/TT-Open-WBO-Inc/algorithms/Alg_PartMSU3.h
    solver/TT-Open-WBO-Inc/algorithms/Alg_WBO.cc
    solver/TT-Open-WBO-Inc/algorithms/Alg_WBO.h
    solver/TT-Open-WBO-Inc/clusterings/Cluster.cc
    solver/TT-Open-WBO-Inc/clusterings/Cluster.h
    solver/TT-Open-WBO-Inc/clusterings/Cluster_DivisiveMaxSeparate.cc
    solver/TT-Open-WBO-Inc/clusterings/Cluster_DivisiveMaxSeparate.h
    solver/TT-Open-WBO-Inc/clusterings/SequenceStatistic.cc
    solver/TT-Open-WBO-Inc/clusterings/SequenceStatistic.h
    solver/TT-Open-WBO-Inc/encodings/Enc_Adder.cc
    solver/TT-Open-WBO-Inc/encodings/Enc_Adder.h
    solver/TT-Open-WBO-Inc/encodings/Enc_CNetworks.cc
    solver/TT-Open-WBO-Inc/encodings/Enc_CNetworks.h
    solver/TT-Open-WBO-Inc/encodings/Enc_GTE.cc
    solver/TT-Open-WBO-Inc/encodings/Enc_GTE.h
    solver/TT-Open-WBO-Inc/encodings/Enc_GTECluster.cc
    solver/TT-Open-WBO-Inc/encodings/Enc_GTECluster.h
    solver/TT-Open-WBO-Inc/encodings/Enc_GTEIncremental.cc
    solver/TT-Open-WBO-Inc/encodings/Enc_GTEIncremental.h
    solver/TT-Open-WBO-Inc/encodings/Enc_Ladder.cc
    solver/TT-Open-WBO-Inc/encodings/Enc_Ladder.h
    solver/TT-Open-WBO-Inc/encodings/Enc_MTotalizer.cc
    solver/TT-Open-WBO-Inc/encodings/Enc_MTotalizer.h
    solver/TT-Open-WBO-Inc/encodings/Enc_SWC.cc
    solver/TT-Open-WBO-Inc/encodings/Enc_SWC.h
    solver/TT-Open-WBO-Inc/encodings/Enc_Totalizer.cc
    solver/TT-Open-WBO-Inc/encodings/Enc_Totalizer.h
    solver/TT-Open-WBO-Inc/encodings/Encodings.cc
    solver/TT-Open-WBO-Inc/encodings/Encodings.h
    solver/TT-Open-WBO-Inc/graph/Graph.cc
    solver/TT-Open-WBO-Inc/graph/Graph.h
    solver/TT-Open-WBO-Inc/graph/Graph_Algorithms.cc
    solver/TT-Open-WBO-Inc/graph/Graph_Communities.cc
    solver/TT-Open-WBO-Inc/graph/Graph_Communities.h
    solver/TT-Open-WBO-Inc/graph/NodeHeap.h
    solver/TT-Open-WBO-Inc/graph/TreeNode.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/core/BoundedQueue.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/core/Constants.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/core/Dimacs.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/core/Solver.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/core/Solver.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/core/SolverTypes.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/mtl/Alg.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/mtl/Alloc.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/mtl/Clone.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/mtl/Heap.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/mtl/IntTypes.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/mtl/Map.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/mtl/Queue.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/mtl/Sort.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/mtl/Vec.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/mtl/XAlloc.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/ClausesBuffer.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/ClausesBuffer.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/Main.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/MultiSolvers.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/MultiSolvers.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/ParallelSolver.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/ParallelSolver.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/SharedCompanion.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/SharedCompanion.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/SolverCompanion.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/SolverCompanion.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/SolverConfiguration.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/parallel/SolverConfiguration.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/simp/Main.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/simp/SimpSolver.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/simp/SimpSolver.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/utils/Options.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/utils/Options.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/utils/ParseUtils.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/utils/System.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.0/utils/System.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/core/BoundedQueue.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/core/Constants.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/core/Dimacs.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/core/Solver.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/core/Solver.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/core/SolverStats.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/core/SolverTypes.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/mtl/Alg.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/mtl/Alloc.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/mtl/Clone.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/mtl/Heap.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/mtl/IntTypes.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/mtl/Map.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/mtl/Queue.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/mtl/Sort.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/mtl/Vec.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/mtl/VecThreads.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/mtl/XAlloc.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/ClausesBuffer.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/ClausesBuffer.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/Main.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/MultiSolvers.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/MultiSolvers.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/ParallelSolver.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/ParallelSolver.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/SharedCompanion.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/SharedCompanion.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/SolverCompanion.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/SolverCompanion.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/SolverConfiguration.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/parallel/SolverConfiguration.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/simp/Main.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/simp/SimpSolver.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/simp/SimpSolver.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/utils/Options.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/utils/Options.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/utils/ParseUtils.h
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/utils/System.cc
    solver/TT-Open-WBO-Inc/solvers/glucose4.1/utils/System.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/core/Dimacs.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/core/Main.cc
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/core/Solver.cc
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/core/Solver.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/core/SolverTypes.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/mtl/Alg.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/mtl/Alloc.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/mtl/Heap.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/mtl/IntTypes.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/mtl/Map.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/mtl/Queue.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/mtl/Sort.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/mtl/Vec.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/mtl/XAlloc.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/simp/Main.cc
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/simp/SimpSolver.cc
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/simp/SimpSolver.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/utils/Options.cc
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/utils/Options.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/utils/ParseUtils.h
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/utils/System.cc
    solver/TT-Open-WBO-Inc/solvers/minisat2.2/utils/System.h
    solver/TT-Open-WBO-Inc/Encoder.cc
    solver/TT-Open-WBO-Inc/Encoder.h
    solver/TT-Open-WBO-Inc/FormulaPB.h
    solver/TT-Open-WBO-Inc/MaxSAT.cc
    solver/TT-Open-WBO-Inc/MaxSAT.h
    solver/TT-Open-WBO-Inc/MaxSAT_Partition.cc
    solver/TT-Open-WBO-Inc/MaxSAT_Partition.h
    solver/TT-Open-WBO-Inc/MaxSATFormula.cc
    solver/TT-Open-WBO-Inc/MaxSATFormula.h
    solver/TT-Open-WBO-Inc/MaxSATFormulaExtended.cc
    solver/TT-Open-WBO-Inc/MaxSATFormulaExtended.h
    solver/TT-Open-WBO-Inc/MaxTypes.h
    solver/TT-Open-WBO-Inc/ParserMaxSAT.h
    solver/TT-Open-WBO-Inc/ParserPB.cc
    solver/TT-Open-WBO-Inc/ParserPB.h
    solver/TT-Open-WBO-Inc/Test.h
    solver/TT-Open-WBO-Inc/Torc.cc
    solver/TT-Open-WBO-Inc/Torc.h
    "validation tools/loesung-validator-0.0.34-20190814.073719-10-cli.jar"
    "validation tools/verification.cp"
    LICENSE
    main.cc
    Makefile
    README.md)

add_executable(train_reschedule ${SOURCE_FILES})